<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Module: r2-navigator-kotlin
  ~ Developers: Aferdita Muriqi, Clément Baumann
  ~
  ~ Copyright (c) 2018. European Digital Reading Lab. All rights reserved.
  ~ Licensed to the Readium Foundation under one or more contributor license agreements.
  ~ Use of this source code is governed by a BSD-style license which is detailed in the
  ~ LICENSE file present in the project repository where this source code is maintained.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="horizontal"
    android:background="@color/sheet_bg_color"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/SettingsTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/font_decrease"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/sheet_bg_color"
                        android:contentDescription="@string/usersettings_description_font_decrease"
                        android:scaleType="fitCenter"
                        android:tint="@color/sheet_text_color"
                        app:srcCompat="@drawable/icon_font_decrease" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/sheet_divider_color" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/font_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:tint="@color/sheet_text_color"
                        android:backgroundTint="@color/sheet_bg_color"
                        android:contentDescription="@string/usersettings_description_font_increase"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/icon_font_increase" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/sheet_text_color"
                        android:text="@string/usersettings_label_font"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_action_settings_intervall_values"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:spinnerMode="dialog"/>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/appearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:background="@drawable/bg_reader_tab"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/appearance_default"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rbtn_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/usersettings_appearance_default"
                        android:textColor="@drawable/rbtn_textcolor_selector"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/appearance_sepia"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rbtn_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/usersettings_appearance_sepia"
                        android:textColor="@drawable/rbtn_textcolor_selector"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/appearance_night"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rbtn_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/usersettings_appearance_night"
                        android:textColor="@drawable/rbtn_textcolor_selector"
                        android:textSize="14sp" />

                </RadioGroup>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>

